// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`__filename-and-__dirname.js 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  __filename: "<rootDir>/src/test_fixtures/scripts/__filename-and-__dirname.js"
  __dirname: "<rootDir>/src/test_fixtures/scripts"
}
{
  __filename: "<rootDir>/src/test_fixtures/scripts/__filename-and-__dirname-2.js"
  __dirname: "<rootDir>/src/test_fixtures/scripts"
}
",
}
`;

exports[`__filename-and-__dirname-2.js 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "",
}
`;

exports[`http-import-error.js 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "Error: Failed to load module (httpStatusCode = 404, url = "http://suchipi.com/there-is-nothing-at-this-path")
  at somewhere
{
  httpStatusCode: 404
  url: "http://suchipi.com/there-is-nothing-at-this-path"
  httpResponseHeaders: <redacted>
  httpResponseBody: <redacted>
}
",
  "stdout": "",
}
`;

exports[`https-import-error.js 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "Error: Failed to load module (httpStatusCode = 404, url = "https://suchipi.com/there-is-nothing-at-this-path")
  at somewhere
{
  httpStatusCode: 404
  url: "https://suchipi.com/there-is-nothing-at-this-path"
  httpResponseHeaders: <redacted>
  httpResponseBody: <redacted>
}
",
  "stdout": "",
}
`;

exports[`importing-from-npm-protocol.js 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  Null prototype
  Sealed
  
  Component: Function "b" {}
  Fragment: Function "k" {}
  cloneElement: Function "F" {}
  createContext: Function "G" {}
  createElement: Function "y" {}
  createRef: Function "_" {}
  default: null
  h: -> {root}.createElement
  hydrate: Function "E" {}
  isValidElement: Function "t" {}
  options: {
    __e: Function "__e" {}
  }
  render: Function "D" {}
  toChildArray: Function "S" {}
}
",
}
`;

exports[`importing-json.js 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  hello: "there"
}
",
}
`;

exports[`npm-proto-import-error.js 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "Error: Failed to load module (httpStatusCode = 404, url = "https://cdn.skypack.dev/@suchipi/this-package-does-not-exist")
  at somewhere
{
  httpStatusCode: 404
  url: "https://cdn.skypack.dev/@suchipi/this-package-does-not-exist"
  httpResponseHeaders: <redacted>
  httpResponseBody: <redacted>
}
",
  "stdout": "",
}
`;

exports[`some-coffeescript.coffee 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "object
object
false
",
}
`;

exports[`some-json.json 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "",
}
`;

exports[`some-jsx.jsx 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  $$typeof: Symbol(JSX.Element)
  type: "a"
  props: null
  key: null
}
true
false
true
false
false
",
}
`;

exports[`some-tsx.tsx 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  $$typeof: Symbol(JSX.Element)
  type: "a"
  props: null
  key: null
}
true
false
true
false
false
",
}
`;

exports[`some-typescript.ts 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "undefined
object true
path: <rootDir>/src/test_fixtures/scripts
<rootDir>/src/test_fixtures/scripts
",
}
`;

exports[`toplevel-await.coffee 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "4 Function "open" {}
",
}
`;

exports[`toplevel-await.js 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "4 Function "open" {}
",
}
`;

exports[`toplevel-await.ts 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "Error: nope!
  at somewhere
",
  "stdout": "",
}
`;

exports[`toplevel-await.tsx 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  $$typeof: Symbol(JSX.Element)
  type: "a"
  props: null
  key: null
}
Function "open" {}
",
}
`;

exports[`toplevel-await-and-export-together.js 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "Error: You cannot use toplevel await and export in the same file. Either remove the toplevel await (by wrapping stuff with an immediately-invoked async function) or remove the exports.
  at somewhere
{
  filename: "<rootDir>/src/test_fixtures/scripts/toplevel-await-and-export-together.js"
}
",
  "stdout": "",
}
`;

exports[`type-coercion-via-assert.ts 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "no error message from hi String
Expected value of type string, but received null
Expected value of type string, but received 24
no error message from hi hi
Expected value of type exactString("hi"), but received "yes"
Expected value of type number, but received "something"
no error message from 42 Number
",
}
`;

exports[`type-coercion-via-is.ts 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "true
false
false
true
false
false
true
",
}
`;
